[package]
name = "tiny-ping"
version = "0.6.0"
authors = ["Lucas Rooyakkers <lucas.rooyakkers@pm.me>", "An Long <aisk1988@gmail.com>", "kolapapa <milk346512016@gmail.com>"]
license = "MIT"
description = "Small Asynchronous ICMP library"
repository = "https://github.com/Fierthraix/ping"
edition = "2024"

[dependencies]
socket2 = { version = "0.6", features = ["all"] }
tokio = { version = "1.5", features = ["net", "rt", "time"] }
